--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@netlify/functions": "^2.0.2",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.6",
     "serverless-http": "^3.2.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
-    "@types/node": "^14.18.61",
+    "@types/node": "^20.12.7",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
